--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   english_words: ^3.1.5
+  flutter_blue: ^0.7.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
